--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,36 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Lekton:wght@400;700&display=swap');
+
+			* {
+				box-sizing: border-box;
+			}
+
+			html {
+				height: 100%;
+			}
+
+			body {
+				margin: 0;
+				overflow: auto;
+				height: 100%;
+				background-color: #000000;
+				color: #FFFFFF;
+				font-family: 'Lekton', monospace;
+				font-size: 24px;
+				margin: 0px;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+			}
+
+			.page-style {
+				overflow: auto;
+				min-height: 100%;
+			}
+		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
