List and link styling

--- a/src/app.html
+++ b/src/app.html
@@ -23,7 +23,7 @@
 				background-color: #000000;
 				color: #FFFFFF;
 				font-family: 'Lekton', monospace;
-				font-size: 24px;
+				/* font-size: 24px; */
 				margin: 0px;
 				display: flex;
 				flex-direction: column;
@@ -33,6 +33,27 @@
 			.page-style {
 				overflow: auto;
 				min-height: 100%;
+			}
+
+			ul {
+				padding: 0;
+				list-style: none;
+			}
+
+			a {
+				background-color: #000000;
+			}
+			a:link {
+				color: #66d9ff;
+			}
+			a:visited {
+				color: #ffe066;
+			}
+			a:hover {
+				color: #99e6ff;
+			}
+			a:active {
+				color: #99e6ff;
 			}
 		</style>
 	</head>
