--- a/src/app.html
+++ b/src/app.html
@@ -21,7 +21,7 @@
 				overflow: auto;
 				height: 100%;
 				background-color: #000000;
-				color: #FFFFFF;
+				color: #ffffff;
 				font-family: 'Lekton', monospace;
 				/* font-size: 24px; */
 				margin: 0px;
