Design starting to come together

--- a/src/app.html
+++ b/src/app.html
@@ -22,8 +22,8 @@
 				height: 100%;
 				background-color: #000000;
 				color: #ffffff;
+				font-size: 2rem;
 				font-family: 'Lekton', monospace;
-				/* font-size: 24px; */
 				margin: 0px;
 				display: flex;
 				flex-direction: column;
@@ -41,19 +41,19 @@
 			}
 
 			a {
-				background-color: #000000;
+				text-decoration: none;
 			}
 			a:link {
-				color: #66d9ff;
+				color: #ffffff;
 			}
 			a:visited {
-				color: #ffe066;
+				color: #ffffff;
 			}
 			a:hover {
-				color: #99e6ff;
+				color: #ffffff;
 			}
 			a:active {
-				color: #99e6ff;
+				color: #ffffff;
 			}
 		</style>
 	</head>
