--- a/src/app.html
+++ b/src/app.html
@@ -2,14 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!-- favicon stuff -->
+		<!-- favicon -->
 		<link
 			rel="icon"
 			href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📷</text></svg>"
 		/>
-		<!-- see SEO.svelte for other head tags -->
 		%sveltekit.head%
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Lekton:wght@400;700&display=swap');
